Port to Minecraft 1.19.2 and added banner patterns.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,33 @@
-# Gradle properties
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Project
+version=2.0
 group=net.darkhax.unownfont
 
-mod_version=1.0.
+# Common
+minecraft_version=1.19.2
+bookshelf_version=16.1.4
+
+# Forge
+forge_version=43.1.1
+
+# Fabric
+fabric_version=0.60.0+1.19.2
+fabric_loader_version=0.14.9
+
+# Mod options
 mod_name=UnownFont
-mod_vendor=Darkhax
-mod_download=https://www.curseforge.com/minecraft/mc-mods/unown-font
-mod_issues=https://github.com/Darkhax-Minecraft/Unown-Font
-mod_authors=Darkhax
+mod_author=Darkhax
+mod_id=unownfont
+mod_homepage=https://www.curseforge.com/minecraft/mc-mods/unown-font
+mod_source=https://github.com/Darkhax-Minecraft/Unown-Font
+mod_issues=https://github.com/Darkhax-Minecraft/Unown-Font/issues
 mod_description=Adds a font inspired by the unown characters to Minecraft.
+mod_license=All Rights Reserved
+mod_twitter=https://twitter.com/DarkhaxDev
+mod_discord=https://discord.darkhax.net
 
-# Dep Versions
-minecraft_version=1.16.5
-forge_version=1.16.5-36.2.33
-mcp_version=20201028-1.16.3
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 
-# Curse properties
-curse_versions=1.16.5
+# CurseForgeGradle
 curse_project=965978
-curse_page=https://www.curseforge.com/minecraft/mc-mods/unown-font
